# CRFactory

./: .gitignore  LICENSE  README.md  pyproject.toml
crfactory/: __main__.py  config.py  downloader.py  encoder.py  ffbin.py  library.py  project.py  scraper.py  server.py  stitcher.py
crfactory/static/: app.js  index.html  style.css
